--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,34 @@
 main {
     margin: var(--6);
 }
+section {
+    display: flex;
+    flex-direction: column;
+    gap: var(--6);
+    margin-block: var(--6);
+}
+.video-container {
+    display: flex;
+    flex-direction: column;
+    gap: var(--5);
+    margin-block-start: var(--5);
+}
 .main-title {
     font-size: var(--fs-xl);
+}
+
+.progress-bar {
+	width: 100%;
+	background-color: var(--gray);
+	height: var(--2);
+	position: relative;
+    border-radius: var(--border);
+}
+.progress-bar::after {
+	content: '';
+	position: absolute;
+	background-color: var(--primary);
+	width: attr(value %);
+	height: inherit;
+	border-radius: inherit;
 }
